force-app/main/default/objects/Participating_Brand__c/Participating_Brand__c.object-meta.xml
<CustomObject>
    <label>Participating Brand</label>
    <nameField>
        <displayFormat>PB-{000000}</displayFormat>
        <label>Participating Brand ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Participating Brands</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>