force-app/main/default/objects/Participating_Brand__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Brand Participating Marketing Activites</relationshipLabel>
    <relationshipName>Marketing_Activities2</relationshipName>
    <type>Lookup</type>
</CustomField>