force-app/main/default/objects/Participating_Brand__c/fields/Activity_Category__c.field-meta.xml
<CustomField>
    <fullName>Activity_Category__c</fullName>
    <formula>TEXT(Marketing_Activity__r.Category__c)</formula>
    <label>Activity Category</label>
    <type>Text</type>
</CustomField>