force-app/main/default/objects/Participating_Brand__c/fields/Activity_Name_Text__c.field-meta.xml
<CustomField>
    <fullName>Activity_Name_Text__c</fullName>
    <description>Activity Name was displaying ID instead of Text on Calendar Anything</description>
    <formula>Marketing_Activity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Name Text</label>
    <type>Text</type>
</CustomField>