force-app/main/default/objects/Participating_Brand__c/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <description>Indicates the name of the referred Village Presence (Brand).</description>
    <formula>Village_Presence__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Brand Name</label>
    <type>Text</type>
</CustomField>