force-app/main/default/objects/Participating_Brand__c/fields/Brand_Status__c.field-meta.xml
<CustomField>
    <fullName>Brand_Status__c</fullName>
    <description>The Status of the Brand</description>
    <formula>TEXT(Village_Presence__r.Status__c)</formula>
    <inlineHelpText>The Status of the Brand</inlineHelpText>
    <label>Brand Status</label>
    <type>Text</type>
</CustomField>