force-app/main/default/objects/Participating_Brand__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <description>for  Gantt Grouping</description>
    <formula>Marketing_Activity__r.Marketing_Campaign__r.Name</formula>
    <label>Campaign</label>
    <type>Text</type>
</CustomField>