force-app/main/default/objects/Participating_Brand__c/fields/Discount_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Discount_Percentage__c</fullName>
    <description>Discount percentage</description>
    <label>Discount %</label>
    <length>20</length>
    <type>Text</type>
</CustomField>