force-app/main/default/objects/Participating_Brand__c/fields/Feature_Details__c.field-meta.xml
<CustomField>
    <fullName>Feature_Details__c</fullName>
    <inlineHelpText>Describe how and where the brand is being featured for the activity</inlineHelpText>
    <label>Brand Feature Details</label>
    <type>TextArea</type>
</CustomField>