force-app/main/default/objects/Participating_Brand__c/fields/Gift_With_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Gift_With_Purchase__c</fullName>
    <label>Gift With Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>