force-app/main/default/objects/Participating_Brand__c/fields/Gift_With_Purchase_Type__c.field-meta.xml
<CustomField>
    <fullName>Gift_With_Purchase_Type__c</fullName>
    <label>Gift With Purchase Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>