force-app/main/default/objects/Participating_Brand__c/fields/Marketing_Activity__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Activity__c</fullName>
    <label>Activity Name</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Participating Brands can only be associated with Village Campaign Activities</errorMessage>
        <filterItems>
            <field>Marketing_Activity__c.Group_or_Village_Activity__c</field>
            <operation>equals</operation>
            <value>Village Activity</value>
        </filterItems>
        <infoMessage>Please select a Village Activity</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Marketing_Activity__c</referenceTo>
    <relationshipLabel>Participating Brands (in Village)</relationshipLabel>
    <relationshipName>Participating_Brands</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>