force-app/main/default/objects/Participating_Brand__c/fields/Marketing_Budget__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Budget__c</fullName>
    <formula>Marketing_Activity__r.Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>