force-app/main/default/objects/Participating_Brand__c/fields/Marketing_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing Campaign</label>
    <referenceTo>Marketing_Campaign__c</referenceTo>
    <relationshipLabel>Participating Brands</relationshipLabel>
    <relationshipName>Participating_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>