force-app/main/default/objects/Participating_Brand__c/fields/Marketing_Manager__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Manager__c</fullName>
    <formula>Village_Presence__r.Marketing_Manager__r.FirstName &amp; &apos; &apos; &amp; Village_Presence__r.Marketing_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Marketing Manager</label>
    <type>Text</type>
</CustomField>