force-app/main/default/objects/Participating_Brand__c/fields/Minimum_Purchase__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Purchase__c</fullName>
    <label>Minimum Purchase</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>