force-app/main/default/objects/Participating_Brand__c/fields/Minimum_Purchase_Amount__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Purchase_Amount__c</fullName>
    <label>Minimum Purchase Amount</label>
    <length>20</length>
    <type>Text</type>
</CustomField>