force-app/main/default/objects/Participating_Brand__c/fields/Participating_Brand_Link__c.field-meta.xml
<CustomField>
    <fullName>Participating_Brand_Link__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; Id,  Village_Presence__r.Brand__r.Name ,&quot;_self&quot;)</formula>
    <label>Participating Brand</label>
    <type>Text</type>
</CustomField>