force-app/main/default/objects/Participating_Brand__c/fields/Primary_Marketing_Contact__c.field-meta.xml
<CustomField>
    <fullName>Primary_Marketing_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Search to find and select the primary brand contact for this activity</inlineHelpText>
    <label>Primary Marketing Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordType.Name</field>
            <operation>equals</operation>
            <value>Brand Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Participating Brands</relationshipLabel>
    <relationshipName>Participating_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>