force-app/main/default/objects/Participating_Brand__c/fields/Retail_Manager__c.field-meta.xml
<CustomField>
    <fullName>Retail_Manager__c</fullName>
    <formula>Village_Presence__r.Retail_Manager__r.FirstName &amp; &apos; &apos; &amp;  Village_Presence__r.Retail_Manager__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retail Manager</label>
    <type>Text</type>
</CustomField>