force-app/main/default/objects/Participating_Brand__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Target</fullName>
                <color>#FF6600</color>
                <label>Target</label>
            </value>
            <value>
                <fullName>Request Sent</fullName>
                <color>#F3D904</color>
                <label>Request Sent</label>
            </value>
            <value>
                <fullName>No</fullName>
                <color>#FF0000</color>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
                <color>#66FF99</color>
                <label>Yes</label>
            </value>
            <value>
                <fullName>Yes - not used</fullName>
                <color>#33CC00</color>
                <label>Yes - not used</label>
            </value>
            <value>
                <fullName>Not Requested Yet</fullName>
                <color>#FFFF66</color>
                <label>Not Requested Yet</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>