force-app/main/default/objects/Participating_Brand__c/fields/Village_Presence__c.field-meta.xml
<CustomField>
    <fullName>Village_Presence__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Please enter the Name of the Brand in Village</inlineHelpText>
    <label>Brand</label>
    <referenceTo>Village_Presence__c</referenceTo>
    <relationshipLabel>Marketing Activities</relationshipLabel>
    <relationshipName>Participating_Brands</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>