force-app/main/default/objects/Participating_Brand__c/validationRules/Village_Mis_Match.validationRule-meta.xml
<ValidationRule>
    <fullName>Village_Mis_Match</fullName>
    <active>false</active>
    <errorConditionFormula>Village_Presence__r.Village__c &lt;&gt;  00Nb0000009ZC7z.00Nb0000009ZC7p</errorConditionFormula>
    <errorDisplayField>Village_Presence__c</errorDisplayField>
    <errorMessage>The Presence Village must match the Marketing Activity Village</errorMessage>
</ValidationRule>